12910 EPOLLONESHOT should not remove fd Reviewed by: Bryan Cantrill <bryan@joyent.com> Reviewed by: Mike Zeller <mike.zeller@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>